Fixed swagger api definition
