# app/gateway/api/handler/medicine_handler.go
@@ -12,21 +12,20 @@ const (
 	medicinePattern = "/medicine"
 )
 
-// GetMedicines retrieves a list of medicines
-// @Summary Retrieve Medicines
-// @Description Get a list of all medicines available
-// @Tags medicines
-// @Accept  json
-// @Produce json
-// @Success 200 {array} Medicine
-// @Failure 500 {object} ErrorResponse
-// @Router /api/v1/farmacia-tech/medicines [get]
 func (h *Handler) GetMedicinesSetup(router chi.Router) {
 	router.Route(medicinePattern, func(r chi.Router) {
 		r.Get("/", h.GetMedicines())
 	})
 }
 
+// GetMedicines
+// @Summary Get Medicines
+// @Description Returns medicines
+// @Tags Medicine
+// @Produce json
+// @Success 200 {object} []entity.Medicine "List of medicines"
+// @Failure 500 "Internal Server Error"
+// @Router /api/v1/farmacia-tech/medicine [get]
 func (h *Handler) GetMedicines() http.HandlerFunc {
 	return func(rw http.ResponseWriter, req *http.Request) {
 		medicines, err := h.useCase.MedicinesRepository.GetMedicines(req.Context())
